# nyrkio

./: .env.backend.example  .flake8  .gitignore  .gitmodules  CLAUDE.md  DEVELOPMENT.md  Dockerfile  Dockerfile.ci  Makefile  README.md  SECURITY_UPDATES_TODO.md  compose.dev.yml  compose.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-prod-really.yml  deploy-prod.yml  deploy-staging.yml  docker-images-prod.yml  docker-images-staging.yml  lint.yml  perf-tests.yml  staging-diagnostics.yml
backend/: .flake8  Dockerfile  README.md  __init__.py  api.py  auth.py  conftest.py  core.py  db.py  entrypoint.sh  main.py  pyproject.toml  pyproject.toml.poetry  runtests.sh
backend/api/: admin.py  api.py  background.py  billing.py  changes.py  config.py  metered.py  model.py  organization.py  public.py  pull_request.py  pullrequest.py  pydantic_exception_handlers.py  pydantic_logger.py  pydantic_middleware.py  user.py
backend/auth/: auth.py  bearer_or_body_transport.py  challenge_publish.py  common.py  email.py  github.py  onelogin.py  superuser.py
backend/auth/templates/: forgot-password.html  verify-email.html
backend/aws/: s3download.py
backend/benches/: process_results.py  test_default_data.py
backend/core/: config.py  core.py  sieve.py
backend/db/: db.py  list_changes.py
backend/github/: generate_gh_acl.sh  gh_runner_ip_list.py  marketplace.py  remote_scripts.py  runner.py  runner_configs.py
backend/integration_tests/: test_background.py
backend/keys/: README.md
backend/nginx/: Dockerfile
backend/notifiers/: abstract_notifier.py  github.py  slack.py
backend/tests/: test_admin.py  test_api.py  test_api_billing.py  test_api_cached.py  test_api_openapi.py  test_api_orgs.py  test_api_pulls.py  test_api_user.py  test_auth.py  test_background.py  test_challenge_publish.py  test_core.py  test_db.py  test_email.py  test_github.py  test_list_changes.py  test_main.py  test_public_pr_cph_notify.py  test_work_queue.py
backend/tests/data/: tigerbeetle.json
certbot/: Dockerfile  check-certs.sh
datasets/: extract-rocksdb-circleci-to-file  rocksdb.2023.tgz
docs/: .readthedocs.yaml  requirements.txt
docs/source/: conf.py  index.md
docs/source/api-reference/: authentication.md  cli.md  data-models.md  index.md  rest-api.md
docs/source/architecture/: caching.md  change-detection.md  database.md  index.md  overview.md
docs/source/deployment/: configuration.md  docker.md  index.md  monitoring.md  production.md
docs/source/developer-guide/: architecture.md  backend.md  contributing.md  frontend.md  index.md  testing.md
docs/source/getting-started/: concepts.md  index.md  installation.md  quick-start.md
docs/source/user-guide/: configuration.md  index.md  notifications.md  organizations.md  pull-requests.md  submitting-results.md  viewing-changes.md
etc/: README.md  nyrkio_backend.py  nyrkio_docker.py  nyrkio_frontend.py  test_management_scripts.py
frontend/: .eslintrc.cjs  BACKEND_CRASH_DIAGNOSIS.md  UI_TEST_STATUS.md  diagnostic-api-tests.py  index.html  package-lock.json  package.json  playwright.config.integration.ts  playwright.config.ts  playwright.nyrkio.reporter.ts  test-api.py  test-backend-crash.py  test-with-john.py  vite.config.js  vite.config.test.js
frontend/.github/workflows/: ci.yaml
frontend/integration-test-results/: results.json
frontend/integration-test-results/html-report/: index.html
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: AboutPage.jsx  AdminDashboard.jsx  AllChangePoints.jsx  BackButton.jsx  BillingPage.jsx  Breadcrumb.jsx  Brew.jsx  Carousel.jsx  ChangePointSummaryTable.jsx  ChangePointSummaryTableMain.jsx  Dashboard.jsx  DebugLayout.jsx  Docs.jsx  DocsChangeDetection.jsx  DocsCurl.jsx  DocsGitPerfPlugin.jsx  DocsGraphs.jsx  DocsTeams.jsx  DrawLineChart.jsx  EcosystemPage.jsx  Footer.jsx  Forbidden.jsx  ForgotPassword.jsx  FrontPage.jsx  GraphNavWidgets.jsx  HighlightLoginSection.jsx  Icon.jsx  ImpersonateControls.jsx  LegalPage.jsx  LegendPage.jsx  Loading.jsx  Login.jsx  Logo.jsx  Nav.jsx  NoMatch.jsx  OrgDashboard.jsx  OrgSettings.jsx  OssUsers.jsx  PricingPage.jsx  ProductPage.jsx  (+15 more)
frontend/src/docs/: intro-action.md  intro-runners.md  intro.md
frontend/src/lib/: github.js  utils.js
frontend/src/mocks/: handlers.js  mockBilling.json
frontend/src/routes/: login.jsx  root.jsx
frontend/src/static/: footer-white-graphic.png.kra
frontend/src/style/: ag-table.scss  configuration.scss  style.scss  swiper.scss  variables.scss
frontend/tests/: README.md  auth.spec.ts  logo.spec.ts
frontend/tests/integration/: AUTHENTICATION_FIX_SUMMARY.md  IMPROVEMENTS.md  README.md  TEST_COVERAGE_GAPS.md  TEST_EXECUTION_STATUS.md  TEST_SETUP_REQUIREMENTS.md  UI_TEST_SUMMARY.md  VALIDATION_STRATEGY.md  auth-utils.ts  auth.integration.ts  dashboard.integration.ts  navigation.integration.ts  settings.integration.ts  test-user-setup.cjs  ui-changepoints.integration.ts  (+7 more)
nginx/: Dockerfile  Dockerfile.dev  etc_nginx_conf  nginx-dev.conf  nginx.conf  test_config.sh
nginx/static/: robots.txt  sitemap.xml
(+49 files in other folders)
