[tool.poetry]
name = "nyrkio"
version = "0.1.0"
description = "A performance change detection service"
authors = ["Matt Fleming <matt@nyrk.io>", "Henrik Ingo <henrik@nyrk.io>"]
packages = [
    {include = "api"},
    {include = "auth"},
    {include = "core"},
    {include = "db"},
]

[tool.poetry.dependencies]
# Match hunter submodule
python = ">=3.8.1,<3.13"
fastapi = "^0.104.1"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
hunter = { path = "./hunter", develop = true }
uvicorn = "^0.24.0.post1"
flake8 = "^6.1.0"
fastapi-users = {extras = ["beanie", "oauth"], version = "^12.1.2"}
# Pinned because of the issue in https://github.com/pyca/bcrypt/issues/684
bcrypt = "4.0.1"
ruff = "^0.1.8"
mongomock-motor = "^0.0.25"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
