[tool.poetry]
name = "nyrkio"
version = "0.1.0"
description = "A performance change detection service"
authors = ["Matt Fleming <matt@nyrkio.com>", "Henrik Ingo <henrik@nyrkio.com>"]
packages = [
    {include = "api"},
    {include = "auth"},
    {include = "core"},
    {include = "db"},
]

[tool.poetry.dependencies]
# Match hunter submodule
python = ">=3.8.1,<3.13"
fastapi = "^0.109.1"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
hunter = { path = "./hunter", develop = true }
uvicorn = "^0.24.0.post1"
fastapi-users = {extras = ["beanie", "oauth"], version = "^12.1.2"}
fastapi-utils = "0.6.0"
typing-inspect = "0.8.0"
# Pinned because of the issue in https://github.com/pyca/bcrypt/issues/684
bcrypt = "4.0.1"
ruff = "^0.1.8"
mongomock-motor = "^0.0.25"
trio = "^0.23.2"
pytest-datadir = "^1.5.0"
sortedcontainers = "^2.4.0"
pytest-benchmark = "^4.0.0"
sentry-sdk = "^1.40.4"
aiohttp = "^3.9.4"
stripe = "^9.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
