[tool.poetry]
name = "nyrkio"
version = "0.1.0"
description = "A performance change detection service"
authors = ["Matt Fleming <matt@nyrkio.com>", "Henrik Ingo <henrik@nyrkio.com>"]
packages = [
    {include = "api"},
    {include = "auth"},
    {include = "core"},
    {include = "db"},
]

[tool.poetry.dependencies]
# Forcing a known to work environment
# Not all of these are top level dependencies
python = ">=3.8.1,<3.13"
hunter = { path = "./hunter", develop = true }
aiohttp = "3.9.4"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anyio = "3.7.1"
async-timeout = "4.0.3"
atomicwrites = "1.4.1"
attrs = "23.2.0"
backports-zoneinfo = {version = "0.2.1", python = "<3.9"}
bcrypt = "4.0.1"
beanie = "1.25.0"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
cryptography = "42.0.4"
dateparser = "1.2.0"
decorator = "5.1.1"
dnspython = "2.6.1"
ecdsa = "0.18.0"
email-validator = "2.0.0.post2"
exceptiongroup = "1.2.0"
expandvars = "0.6.5"
fastapi = "0.109.1"
fastapi-users = "12.1.2"
fastapi-users-db-beanie = "3.0.0"
frozenlist = "1.4.1"
h11 = "0.14.0"
httpcore = "1.0.3"
httpx = "0.26.0"
httpx-oauth = "0.13.2"
idna = "3.7"
importlib-metadata = "7.0.1"
lazy-model = "0.2.0"
makefun = "1.15.2"
mongomock = "4.1.2"
mongomock-motor = "0.0.25"
more-itertools = "8.14.0"
motor = "3.3.2"
multidict = "6.0.5"
numpy = "1.24.0"
outcome = "1.3.0.post0"
packaging = "23.2"
passlib = "1.7.4"
pluggy = "^1.0.0"
py = "1.11.0"
py-cpuinfo = "9.0.0"
pyasn1 = "0.5.1"
pycparser = "2.21"
pydantic = "2.6.1"
pydantic-core = "2.16.2"
pyjwt = "2.8.0"
pymongo = "4.6.3"
pystache = "0.6.5"
pytest = "^7.4.0"
pytest-benchmark = "4.0.0"
pytest-datadir = "1.5.0"
pytest-xdist = "^3.5.0"
python-dateutil = "2.8.2"
python-jose = "3.3.0"
python-multipart = "0.0.6"
pytz = "2024.1"
regex = "2023.12.25"
requests = "2.31.0"
rsa = "4.9"
ruamel-yaml = "0.17.21"
ruamel-yaml-clib = "0.2.8"
ruff = "0.4.10"
scipy = "1.9.3"
sentinels = "1.0.0"
sentry-sdk = "1.40.4"
signal-processing-algorithms = "1.3.4"
six = "1.16.0"
slack-sdk = "3.27.0"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
starlette = "0.35.1"
stripe = "9.2.0"
structlog = "19.2.0"
tabulate = "0.8.10"
toml = "0.10.2"
trio = "0.23.2"
typing-extensions = "4.9.0"
tzdata = "2024.1"
tzlocal = "5.2"
urllib3 = "1.26.11"
uvicorn = "0.24.0.post1"
validators = "0.18.2"
wcwidth = "0.2.13"
yarl = "1.9.4"
zipp = "3.17.0"
fabric = "^3.2.2"
boto3 = "1.37.10"
botocore = "1.37.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
